adding live link

--- a/index.html
+++ b/index.html
@@ -103,14 +103,13 @@
             <p class="project-subHeading">A PDF editor that offers essential PDF manipulation tools, along with a customized sorting feature based on user-defined criteria.
             </p>
             <div class="btn-grp">
-              
-              <a href="https://github.com/codecraftcompiler/Customized-PDF-Editor">
+              <a href="https://github.com/codecraftcompiler/Customize-PDF-Editor">
                 <button class="btn-pink btn-project">Read More</button>
-                <!-- <i title="GitHubLink" class="fa-brands fa-github icon"></i> -->
               </a>
-              <!-- <a href="https://drive.google.com/file/d/1UIZRmCw6fgzdUyHvY0q26JTgJHgKYpie/view?usp=sharing">
-                <i title="Live Link" class="fa-solid fa-link icon"></i>
-              </a> -->
+              <a href="https://customize-pdf-manipulation.onrender.com/">
+                <!-- <i title="Live Link" class="fa-solid fa-link icon"></i> -->
+                  <button class="btn-pink btn-project">Live </button>
+              </a>
             </div>
           </div>
         </div>
@@ -167,7 +166,8 @@
                  <button class="btn-pink btn-project">Read More</button>
               </a>
               <a href="https://gif-generator-rose-delta.vercel.app/">
-                <i title="Live Link" class="fa-solid fa-link icon"></i>
+                <!-- <i title="Live Link" class="fa-solid fa-link icon"></i> -->
+                 <button class="btn-pink btn-project">Live </button>
               </a>
             </div>
           </div>
